deployment/01-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: pixelcorp
  labels:
    app: mysql
spec:
  ports:
    - name: mysql
      port: 3306
    - name: healthz
      port: 80
  selector:
    app: mysql
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  namespace: pixelcorp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        imagePullPolicy: Always
        ports:
          - name: mysql
            containerPort: 3306
      - name: mysql-healthz
        image: stevesloka/mysql-healthz:1.0.0
        imagePullPolicy: Always
        ports:
          - name: healthz
            containerPort: 80
---
