deployment/02-api.yaml

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pixelcorp
  labels:
    app: api
spec:
  ports:
    - name: api
      port: 8080
  selector:
    app: api
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: pixelcorp
  annotations:
    emmie-replace: api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: stevesloka/pixelcorp-api:1.0.0
        imagePullPolicy: Always
        ports:
          - name: api
            containerPort: 8080
---
