deployment/03-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: pixelcorp
  labels:
    app: web
spec:
  ports:
    - name: tls
      port: 443
    - name: standard
      port: 80
  selector:
    app: web
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: pixelcorp
  annotations:
    emmie-update: web
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: stevesloka/pixelcorp-webui:1.0.0
        imagePullPolicy: Always
        ports:
          - name: tls
            containerPort: 443
          - name: standard
            containerPort: 80
