deployment/04-api-ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: api
  namespace: pixelcorp
spec: 
  routes: 
    - match: /team
      services: 
        - name: api
          port: 8080
